<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_edit_contact"
    tools:context="com.school42.rpuccine.hangouts.EditContact">

    <EditText
        android:id="@+id/editContactFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/first_name_hint"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editContactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below= "@id/editContactFirstName"
        android:hint="@string/name_hint"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editContactTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below= "@id/editContactName"
        android:hint="@string/tel_hint"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/editContactTelOffice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below= "@id/editContactTel"
        android:hint="@string/tel_office_hint"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/editContactMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below= "@id/editContactTelOffice"
        android:hint="@string/mail_hint"
        android:inputType="textEmailAddress"/>

</RelativeLayout>
